--- a/styles.css
+++ b/styles.css
@@ -90,7 +90,8 @@ footer {
     width: 80px;
 }
 .settings-panel label {
-    margin-right: 20px;
+    mergin-left: 16px
+    margin-right: 4px;
     cursor: pointer;
 }
 .settings-panel button {
