--- a/styles.css
+++ b/styles.css
@@ -90,7 +90,7 @@ footer {
     width: 80px;
 }
 .settings-panel label {
-    mergin-left: 16px
+    margin-left: 16px;
     margin-right: 4px;
     cursor: pointer;
 }
